Fix transparent overlap of title bars

--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -848,6 +848,7 @@ body.is-resizing {
     padding: 3px 3px 3px 3px;
     height: 1.5em;
     transition: opacity .5s;
+    background: var(--code-area-bg-color);
 }
 
 .title-row.hidden {
